@@ -1,3 +1,10 @@
+2015-10-06  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/balance.R (balance): also add 'job = "N"' (i.e., 'none') option.
+
+	* src/R_dgebal.c (R_dgebal): catch +/-Inf in matrix avoiding
+	infinite loop in Lapack's DGEBAL(); thanks to Terry Thernau.
+
 2014-09-11  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* NAMESPACE: no longer export logm.Higham08
